[gd_scene load_steps=4 format=3 uid="uid://c04qffs0rpu7b"]

[ext_resource type="Script" uid="uid://dy8pr32q24jrk" path="res://src/ui/node_graph_ui/nodes/sfx_node.gd" id="1_441ag"]
[ext_resource type="Script" uid="uid://b0ahwwpv2ndmh" path="res://src/ui/custom/path_line_edit.gd" id="2_3w5k5"]
[ext_resource type="Script" uid="uid://bbx5728n2qxfj" path="res://src/ui/slider_combo/slider_combo.gd" id="3_26xcn"]

[node name="AudioFileNode" type="GraphNode"]
custom_minimum_size = Vector2(200, 0)
resizable = true
title = "Audio file"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = true
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_441ag")
type = "Audio file"
resize_mode = 1

[node name="OutputOutput" type="Label" parent="."]
layout_mode = 2
text = "Output"
horizontal_alignment = 2

[node name="PathLineEdit" type="HBoxContainer" parent="."]
layout_mode = 2
script = ExtResource("2_3w5k5")
placeholder_text = "File"
filters = PackedStringArray("*.mp3,*.wav,*.ogg;Audio files")

[node name="LoopCheckBox" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Loop"

[node name="SliderCombo" type="Range" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 2
auto_translate_mode = 1
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 37)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
tooltip_text = ""
tooltip_auto_translate_mode = 0
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 100.0
step = 0.001
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
script = ExtResource("3_26xcn")
prefix = "Time: "
metadata/is_slider_combo = true
