[gd_scene load_steps=9 format=3 uid="uid://dhcmoh3r3ddr0"]

[ext_resource type="Script" path="res://src/ui/node_graph_ui/nodes/sfx_node.gd" id="1_63pic"]
[ext_resource type="Script" path="res://src/ui/slider_combo/slider_combo.gd" id="2_dha2f"]
[ext_resource type="Texture2D" uid="uid://b4h5sl0mq7oap" path="res://src/assets/icons/constant.png" id="2_ibjtf"]
[ext_resource type="Texture2D" uid="uid://bha8dyec3uu8a" path="res://src/assets/icons/bell.png" id="3_cbxi4"]
[ext_resource type="Texture2D" uid="uid://nbf1yl3rjr4j" path="res://src/assets/icons/triangle.png" id="4_84vl7"]
[ext_resource type="Texture2D" uid="uid://db8xyduw22wl8" path="res://src/assets/icons/linear_positive.png" id="5_q0d5p"]
[ext_resource type="Texture2D" uid="uid://bex04fqld3w3n" path="res://src/assets/icons/linear_negative.png" id="6_8abpn"]
[ext_resource type="Script" path="res://src/ui/custom/custom_option_button.gd" id="7_goqs2"]

[node name="ConvolutionalLowPassNode" type="GraphNode"]
custom_minimum_size = Vector2(200, 0)
offset_right = 200.0
offset_bottom = 192.0
title = "Convolutional low pass"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = true
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = true
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("1_63pic")
type = "Convolutional low pass"

[node name="OutputOutput" type="Label" parent="."]
layout_mode = 2
text = "Output"
horizontal_alignment = 2

[node name="Filter" type="OptionButton" parent="."]
layout_mode = 2
flat = true
icon_alignment = 2
expand_icon = true
selected = 0
item_count = 5
popup/item_0/text = "Constant"
popup/item_0/icon = ExtResource("2_ibjtf")
popup/item_0/id = 0
popup/item_1/text = "Bell"
popup/item_1/icon = ExtResource("3_cbxi4")
popup/item_1/id = 1
popup/item_2/text = "Triangle"
popup/item_2/icon = ExtResource("4_84vl7")
popup/item_2/id = 4
popup/item_3/text = "Linear positive"
popup/item_3/icon = ExtResource("5_q0d5p")
popup/item_3/id = 2
popup/item_4/text = "Linear negative"
popup/item_4/icon = ExtResource("6_8abpn")
popup/item_4/id = 3
script = ExtResource("7_goqs2")

[node name="InputInput" type="Range" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
auto_translate_mode = 1
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 37)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
auto_translate = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
script = ExtResource("2_dha2f")
prefix = "Input: "
slider_visible = false
metadata/is_slider_combo = true

[node name="LengthInput" type="Range" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
auto_translate_mode = 1
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 45)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
auto_translate = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0001
max_value = 0.005
step = 0.0001
page = 0.0
value = 0.005
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
script = ExtResource("2_dha2f")
prefix = "Length: "
slider_value = 0.005
metadata/is_slider_combo = true

[node name="BlendInput" type="Range" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
auto_translate_mode = 1
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 45)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
auto_translate = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 1.0
step = 0.01
page = 0.0
value = 0.5
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
script = ExtResource("2_dha2f")
prefix = "Blend: "
slider_value = 0.5
metadata/is_slider_combo = true

[connection signal="item_selected" from="Filter" to="." method="_emit_changed_arg"]
